--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pydantic_core==2.33.2
 python-dotenv==1.1.0
 python-multipart==0.0.20
 requests==2.32.3
+resend==2.8.0
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.0
