--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,77 @@
 annotated-types==0.7.0
-anyio==4.9.0
-certifi==2025.4.26
-charset-normalizer==3.4.1
-click==8.1.8
-docutils==0.21.2
+anyio==4.8.0
+astroid==3.3.8
+bcrypt==4.3.0
+beautifulsoup4==4.12.3
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+coverage==7.8.0
+dash==2.18.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dill==0.3.9
+dnspython==2.7.0
+ecdsa==0.19.1
 fastapi==0.115.12
-h11==0.16.0
+Flask==3.0.3
+frozendict==2.4.6
+gunicorn==23.0.0
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
-mailersend==0.6.0
-pydantic==2.11.4
-pydantic_core==2.33.2
+importlib_metadata==8.5.0
+iniconfig==2.1.0
+isort==6.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.5
+lxml==5.3.0
+MarkupSafe==3.0.2
+mccabe==0.7.0
+multitasking==0.0.11
+nest-asyncio==1.6.0
+numpy==2.0.2
+packaging==24.2
+pandas==2.2.3
+peewee==3.17.8
+platformdirs==4.3.6
+plotly==5.24.1
+pluggy==1.5.0
+pyasn1==0.4.8
+pydantic==2.10.6
+pydantic_core==2.27.2
+pylint==3.3.4
+pymongo==4.11.3
+pytest==8.3.5
+pytest-cov==6.1.1
+pytest-cover==3.0.0
+pytest-coverage==0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-python-multipart==0.0.20
+python-jose==3.4.0
+pytz==2024.2
+replicate==1.0.4
 requests==2.32.3
-resend==2.8.0
+resend==2.9.0
+retrying==1.3.4
+rsa==4.9.1
+setuptools==75.6.0
+six==1.17.0
 sniffio==1.3.1
-starlette==0.46.2
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-urllib3==2.4.0
-uvicorn==0.34.2
+soupsieve==2.6
+starlette==0.46.1
+tenacity==9.0.0
+tomlkit==0.13.2
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.34.0
+webencodings==0.5.1
+Werkzeug==3.0.6
+yfinance==0.2.50
+zipp==3.21.0
